force-app/main/default/objects/Sales_Forecast__c/Sales_Forecast__c.object-meta.xml
<CustomObject>
    <label>Sales Forecast</label>
    <pluralLabel>Sales Forecasts</pluralLabel>
    <nameField>
        <label>Forecast Name</label>
        <displayFormat>FCST-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>