force-app/main/default/objects/Sales_Forecast__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <label>Actual Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>