force-app/main/default/objects/Sales_Forecast__c/fields/Attainment__c.field-meta.xml
<CustomField>
    <fullName>Attainment__c</fullName>
    <label>Attainment</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(Target_Amount__c &gt; 0, Actual_Amount__c / Target_Amount__c * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>