force-app/main/default/objects/Sales_Forecast__c/fields/Best_Case_Amount__c.field-meta.xml
<CustomField>
    <fullName>Best_Case_Amount__c</fullName>
    <label>Best Case Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>