force-app/main/default/objects/Sales_Forecast__c/fields/Committed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Committed_Amount__c</fullName>
    <label>Committed Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>