force-app/main/default/objects/Sales_Forecast__c/fields/Forecast_Owner__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Owner__c</fullName>
    <label>Forecast Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecasts_Owned</relationshipName>
    <relationshipLabel>Forecasts Owned</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>