force-app/main/default/objects/Sales_Forecast__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Sales_Territory__c</referenceTo>
    <relationshipName>Forecasts</relationshipName>
    <relationshipLabel>Forecasts</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>